# mini-packages

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml
api/: Cargo.toml  Dockerfile
api/src/: config.rs  db.rs  error.rs  main.rs  model.rs  schema.rs  state.rs  telemetry.rs
api/src/handler/: health.rs  mod.rs  npm.rs  tokens.rs
api/src/repo/: mod.rs  packages.rs  tokens.rs
api/src/service/: auth.rs  blob.rs  mod.rs  package.rs  registry.rs  token_crypto.rs  tokens.rs
e2e/: .env.example  package.json
e2e/scripts/: npm-pnpm-smoke.mjs
web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
web/src/lib/: config.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/api/[...path]/: +server.ts
